general theme edit

--- a/Web/views/main.html
+++ b/Web/views/main.html
@@ -1,17 +1,16 @@
 ﻿<div>
     <header></header>
     <div class="clearfix"> </div>
-    <div class="page-head">
+    <!--<div class="page-head">
         <div class="page-head">
             <div class="container">
-                <!-- BEGIN PAGE TITLE -->
                 <div class="page-title">
                   
                 </div>
            
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="page-container">
         <div class="page-content-wrapper">          
             <div class="page-content">
