--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -2,26 +2,32 @@
     <div class="page-header-top">
         <div class="container">
             <div class="row">
-                <ul class="nav navbar-nav">                   
+                <ul class="nav navbar-nav">
                     <li style="max-width:500px; padding: 16px;float:left">
                         <a ui-sref="home.locations" ui-sref-opts="{reload: true}">
                             <img src="{{logo}}" alt="logo" class="logo-default">
                         </a>
-                    </li>                 
-                    <li style="padding-right:10px" class="pull-right">
-                        <a href="javascript:;" class="menu-toggler"></a>
                     </li>
-                </ul>
-                <div class="top-menu">
-                    <ul class="nav navbar-nav pull-right-md">                       
 
-                        <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
-                            <a ui-sref="home.login" ui-sref-opts="{reload: true}">
+                    <li style="margin-top:10px;margin-right:5px" class="pull-right hidden-lg hidden-md">
+                        <a ui-sref="home.register" ui-sref-opts="{reload: true}" class="btn btn-sm btn-block btn-circle-right bg-green-jungle bg-font-green-jungle"><i class="fa fa-registered"></i>Kayıt Ol</a>
+
+                    </li><li style="margin-top:10px" class="pull-right hidden-lg hidden-md">
+                        <a ui-sref="home.login" ui-sref-opts="{reload: true}" class="btn btn-sm btn-block btn-circle-left bg-blue-steel bg-font-blue-steel">
+                            <i class="fa fa-sign-in right"></i>Giriş Yap
+                        </a>
+                    </li>
+
+                </ul>
+                <div class="top-menu hidden-xs">
+                    <ul class="nav navbar-nav pull-right-md hide-xs">  
+                        <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true" >
+                            <a ui-sref="home.login" ui-sref-opts="{reload: true}" class="btn btn-block btn-circle-left bg-blue-steel bg-font-blue-steel">
                                 <i class="fa fa-sign-in right"></i>Giriş Yap
                             </a>
                         </li>
                         <li style="float:left" class="hidden-xs" ng-show="isLogged!==true">
-                            <a ui-sref="home.register" ui-sref-opts="{reload: true}"><i class="fa fa-registered"></i>Kayıt Ol</a>
+                            <a ui-sref="home.register" ui-sref-opts="{reload: true}" class="btn btn-block btn-circle-right  bg-green-jungle bg-font-green-jungle"><i class="fa fa-registered"></i>Kayıt Ol</a>
                         </li>
                         <li class="dropdown dropdown-user dropdown-dark" ng-show="isLogged===true" class="hidden-xs">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
