--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -12,7 +12,7 @@
                         <a href="javascript:;" class="menu-toggler"></a>
                     </li>
                 </ul>
-                <div class="top-menu">
+                <div class="top-menu hide-mobile">
                     <ul class="nav navbar-nav pull-right-md">                       
 
                         <li style="float:left;" class="hidden-xs" ng-show="isLogged!==true">
