--- a/Mobile/www/views/auth/login.html
+++ b/Mobile/www/views/auth/login.html
@@ -5,7 +5,7 @@
                 <div class="card login-container" content-tabs tabsdata=tabsdata>
                     <form name="login_form" class="" novalidate ng-cloak>
                         <my-tabs>
-                            <my-tab title="Email">
+                            <my-tab title="Mail& Þifre">
                                 <div class="list">
                                     <label class="item item-input">
                                         <input type="email" placeholder="Email" name="user_email" ng-model="user.email" required>
