--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -29,7 +29,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
-                                        <a href="page_user_profile_1.html">
+                                        <a ui-sref="home.account({userId: userID  })">
                                             <i class="icon-user"></i> My Profile
                                         </a>
                                     </li>
