--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -56,7 +56,7 @@
                             </li>
                             <li>
                                 <a ng-click="DeleteLocation(location.ID)">
-                                    <i class="fa fa-pencil"></i> Sil
+                                    <i class="fa fa-remove"></i> Sil
                                 </a>
                             </li>
                             
