--- a/Web/views/admin-partials/users.html
+++ b/Web/views/admin-partials/users.html
@@ -22,7 +22,7 @@
 
 
                 <th width="20%"> Ad Soyad  </th>
-                <th width="20"> Mail </th>
+                <th width="20%"> Mail </th>
                 <th width="20%"> Kayıt Tarihi </th>
                 <th width="20%"> Kullanıcı Tipi </th>
                 <th width="20%"> Yorum Sayısı </th>
@@ -45,14 +45,15 @@
                             <i class="fa fa-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu pull-right">
-                            <li>
+                            <li class="dropdown-toggle">
                                 <a href="javascript:;">
-                                    <i class="fa fa-pencil"></i> Düzenle
+                                    <i class="fa fa-laptop"></i> Yetkilendir
                                 </a>
+
                             </li>
                             <li>
                                 <a ng-click="DeleteUser(user.ID)">
-                                    <i class="fa fa-pencil"></i> Sil
+                                    <i class="fa fa-remove"></i> Sil
                                 </a>
                             </li>
 
