--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -23,7 +23,7 @@
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="img-circle" ng-src="{{profileImg}}" />
+                                    <img alt="" class="image" ng-src="{{profileImg}}" />
                                     <span class="username username-hide-on-mobile"> {{nick|strLimit:12}} </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
