--- a/Mobile/www/views/app/miscellaneous/maps.html
+++ b/Mobile/www/views/app/miscellaneous/maps.html
@@ -8,9 +8,9 @@
         <div class="col">
           <div class="list">
             <div class="item item-input-inset">
-              <a class="button button-icon icon ion-pinpoint" ng-click="centerOnMe()"></a>
+              <a class="button button-icon icon ion-search" ng-click="centerOnMe()"></a>
               <label class="item-input-wrapper">
-                <input type="text" placeholder="My Location" disabled ng-model="my_location">
+                <input type="text" placeholder="My Location"  ng-model="my_location">
               </label>
             </div>
           </div>
