--- a/Mobile/www/views/app/home.html
+++ b/Mobile/www/views/app/home.html
@@ -59,9 +59,8 @@
                 <h2>Marty McFly</h2>
                 <p>November 5, 1955</p>
             </ion-item>-->
-            <pre-img ratio="_1_1" helper-class="square-image">
-                <img class="category-image" ng-src="{{location.Banner}}" spinner-on-load>
-            </pre-img>
+
+            <img ng-src="{{location.Banner}}">
 
             <ion-card-content>
                 <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
