--- a/Mobile/www/views/app/locations/home.html
+++ b/Mobile/www/views/app/locations/home.html
@@ -1,58 +1,55 @@
-﻿<ion-view class="feeds-categories-view">
+﻿<ion-view class="wordpress-view">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-title>
-        <span>Feeds Categories</span>
+        <span>WordPress</span>
     </ion-nav-title>
     <ion-content>
-        <ion-card ng-repeat="location in locations">
+        <!-- Refresh to get the new posts -->
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        </ion-refresher>
+        <div class="posts-list">
+            <div ng-repeat="location in locations" class="list card post-item">
+                <div class="post-heading item item-text-wrap">
+                    <h2 class="post-title">{{location.Name}}</h2>
+                    <hr />
+                    <p class="post-author icon icon-right ion-arrow-graph-up-right" style="color:#ffc900!important">
+                        Size {{location.DistanceToUser}} km uzaklıkta
 
-            <!--<ion-item>
-                <ion-avatar item-left>
-                    <img src="img/marty-avatar.png">
-                </ion-avatar>
-                <h2>Marty McFly</h2>
-                <p>November 5, 1955</p>
-            </ion-item>-->
-            <pre-img ratio="_1_1" helper-class="square-image">
-                <img  ng-src="{{location.Banner}}" spinner-on-load>
-            </pre-img>
-
-            <ion-card-content>
-                <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
-            </ion-card-content>
-
-            <ion-row no-padding="">
-                <ion-col>
-                    <button clear="" danger="" small="" class="disable-hover button button-clear button-small button-icon-left button-clear-danger">
-                        <span class="button-inner">
-                            <ion-icon name="star" role="img" class="ion-ios-star" aria-label="star"></ion-icon>
-                            Favorite
-                        </span><ion-button-effect></ion-button-effect>
-                    </button>
-                </ion-col>
-                <ion-col text-center="">
-                    <button clear="" danger="" small="" class="disable-hover button button-clear button-small button-icon-left button-clear-danger">
-                        <span class="button-inner">
-                            <ion-icon name="musical-notes" role="img" class="ion-ios-musical-notes" aria-label="musical notes"></ion-icon>
-                            Listen
-                        </span><ion-button-effect></ion-button-effect>
-                    </button>
-                </ion-col>
-                <ion-col text-right="">
-                    <button clear="" danger="" small="" class="disable-hover button button-clear button-small button-icon-left button-clear-danger">
-                        <span class="button-inner">
-                            <ion-icon name="share-alt" role="img" class="ion-ios-share-alt" aria-label="share alt"></ion-icon>
-                            Share
-                        </span><ion-button-effect></ion-button-effect>
-                    </button>
-                </ion-col>
-            </ion-row>
-
-        </ion-card>
+                    </p>
+                </div>
+                <div class="post-content item item-text-wrap" post-content>
+                    <p class="post-excerpt" dynamic-anchor-fix ng-bind-html="location.Info | rawHtml"></p>
+                    <img class="alignnone size-medium wp-image-92" ng-src="{{location.Banner}}" alt="fotos-de-paisajes" width="300" height="195">
+                    <div class="post-actions row">
+                        <div class="col text-left" style="padding-right: 10px;">
+                            <button class="button button-block button-positive button-small icon icon-left ion-heart " style="margin-right:10px" ng-click="like">
+                                {{location.LikeCount}}
+                            </button>
+                        </div>
+                        <div class="col text-left" style="padding-right: 10px;">
+                            <button class="button button-block button-balanced button-small icon icon-left ion-chatbox-working ">
+                                {{location.CommentCount}}
+                            </button>
+                        </div>
+                        <div class="col text-left" style="padding-right: 10px;">
+                            <a class="button  button-block button-assertive button-small icon icon-left ion-cube " ui-sref="app.details({locationId: location.ID   })">
+                                Detay
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Infinit scroll -->
+        <ion-infinite-scroll ng-if="moreDataCanBeLoaded()" on-infinite="loadMoreData()" distance="1%" icon="ion-loading-c">
+        </ion-infinite-scroll>
     </ion-content>
 </ion-view>
+
+
+
 
 
 
