--- a/Web/views/partials/locations.html
+++ b/Web/views/partials/locations.html
@@ -84,7 +84,7 @@
                                         <button type="button" class="btn btn-sm blue" ng-click="like(location.ID)" style="width:25%">
                                             <i class="fa fa-thumbs-o-up"></i> &nbsp;{{location.LikeCount}}
                                         </button>
-                                        <button type="button" class="btn btn-sm yellow" ng-click="comment(location.ID)" style="width:25%">
+                                        <button type="button" class="btn btn-sm yellow" ng-click="openComment(location)" style="width:25%">
                                             <i class=" fa fa-commenting-o">
                                             </i> &nbsp;{{location.CommentCount}}
                                         </button>
