--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -1,15 +1,13 @@
 ﻿<div class="blog-page blog-content-2">
     <div class="row">
         <div class="col-lg-12">
-
-            <div class="blog-single-content bordered blog-container">
-                <div class="blog-single-head">
-                    <h1 class="blog-single-head-title">{{location.Name}}</h1>
-                    <div class="blog-single-head-date">
-
+            <div class="portlet box green-dark ">
+                <div class="portlet-title">
+                    <div class="caption">
+                        <i class="fa fa-gift"></i>{{location.Name}}
                     </div>
                 </div>
-                <div class="blog-single-img">
+                <div class="portlet-body">
                     <uib-carousel interval="myInterval" style="margin:auto;height:305px; max-width:800px">
                         <uib-slide ng-repeat="slide in slides" active="slide.active">
                             <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
@@ -18,63 +16,69 @@
                             </div>
                         </uib-slide>
                     </uib-carousel>
-                </div>
-                <div class="blog-single-desc">
-                    <p ng-bind-html="location.Info">
+                    <div class="blog-single-desc">
+                        <p ng-bind-html="location.Info">
 
-                    </p>
-
-                </div>
-                <div class="blog-single-foot">
-                    <ul class="blog-post-tags">
-                        <li class="selected=='map'?active:''">
-                            <a ng-click="open(location)" data-toggle="tab" class="btn btn-primary"> Yol Tarifi Al </a>
-                        </li>
-                    </ul>
-                    <div class="blog-post-meta">
-                    <h3 class="sbold blog-comments-title">Yorumlar({{location.CommentCount}})</h3>
-
-                    </div>                   
-                </div>
-              
-                <div class="blog-comments" style="width:80%">
-                  
-
-               <div class="c-comment-list" style="max-height:310px;  overflow: auto;">
-                   <div class="media" ng-repeat="comment in location.Comments">
-                       <div class="media-left">
-                           <a href="#">
-                               <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}">
-                           </a>
-                       </div>
-                       <div class="media-body">
-                           <h4 class="media-heading">
-                               <a href="#">{{comment.UserName}}</a>
-                               <span am-time-ago="comment.Date" class="c-date"></span>
-                           </h4>
-                           {{comment.Comment}}
-                       </div>
-                   </div>
+                        </p>
 
                     </div>
-                    <div ng-if="isVisible">
-                        <h3 class="sbold blog-comments-title">Yorum Yap</h3>
-                        <form action="#">
-                            <div class="form-group">
-                                <textarea rows="8" name="message" ng-model="comment.Comment" placeholder="Yorumunuzu Yazınız ..." class="form-control c-square"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="button" class="btn blue uppercase btn-md sbold btn-block" ng-click="sendComment()">Gönder</button>
-                            </div>
-                        </form>
+                    <div class="blog-single-foot margin-bottom-10">
+                        <span ng-click="open(location)" role="button" data-toggle="tab" class="btn blue btn-outline btn-file pull-right margin-bottom-40"> Yol Tarifi Al </span>
+                       
                     </div>
-                 
+
+                    <br/>
+                    <div class="bg-green-dark bg-font-green-dark" style="height:41px; margin-top:45px;">
+                        <div class="caption" style="    padding: 11px 0 9px">
+                            <i class="fa fa-gift" style="float: left; margin-top: 4px; display: inline-block;font-size: 18px; margin-right: 5px;"></i>Yorumlar({{location.CommentCount}})
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row">
+                        <div class="col-lg-6" style=" border-right:1px solid #eee   ">
+                            <div class=" blog-comments" style="width:100%;">
+                                <div class="c-comment-list" style="max-height:250px; max-width:100%; overflow:auto; margin-top:-10px ; margin-left:25px;">
+                                    <div class="media" ng-repeat="comment in location.Comments">
+                                        <div class="media-left">
+                                            <a href="#">
+                                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}">
+                                            </a>
+                                        </div>
+                                        <div class="media-body " style=" width:100%; height:100%">
+                                            <span class="ng-binding caption-subject bold uppercase">
+                                                <a href="#">{{comment.UserName}}</a>
+                                            </span>
+                                            <span am-time-ago="comment.Date" class="c-date caption-helper caption font-grey-silver"></span>
+
+                                            <div class="media-middle" style=" max-height:100%; max-width:100px; ">
+                                                <span>    {{comment.Comment}}</span>
+
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div ng-if="isVisible">
+                                <div class="form-group">
+                                    <textarea rows="5" name="message" ng-model="comment.Comment" placeholder="Yorumunuzu Yazınız ..." class="form-control c-square"></textarea>
+                                </div>
+                                <div class="form-group ">
+                                    <button type="button" class="btn blue uppercase pull-right" ng-click="sendComment()">Gönder</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
+
+
+
         </div>
 
     </div>
 
-
 </div>
-
