--- a/Web/views/partials/comments.html
+++ b/Web/views/partials/comments.html
@@ -8,7 +8,7 @@
 
                         <div class="portlet-title">
                             <div class="caption">
-                                <i class="fa fa-gift"></i>Yorumlar({{location.CommentCount}})
+                                <i class="fa fa-commenting-o"></i>Yorumlar({{location.CommentCount}})
                             </div>
 
                         </div>
