--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -29,8 +29,8 @@
 
                     <br/>
                     <div class="bg-green-dark bg-font-green-dark" style="height:41px; margin-top:45px;">
-                        <div class="caption" style="    padding: 11px 0 9px">
-                            <i class="fa fa-gift" style="float: left; margin-top: 4px; display: inline-block;font-size: 18px; margin-right: 5px;"></i>Yorumlar({{location.CommentCount}})
+                        <div class="caption" style="    padding: 11px 10px 9px">
+                            <i class=" fa fa-commenting-o" style="float: left; margin-top: 4px; display: inline-block;font-size: 18px; margin-right: 5px;"></i>Yorumlar({{location.CommentCount}})
                         </div>
                     </div>
                     <br />
