--- a/Mobile/www/views/app/locations/directions.html
+++ b/Mobile/www/views/app/locations/directions.html
@@ -2,7 +2,7 @@
     <div class="modal" >
         <div class="mapWrap" data-tap-disabled="true" style="height:400px">
             <div class="col">
-                <map center="{{latitude}},{{longitude}}" zoom="10" options="options" style="height:300px;">
+                <map center="{{latitude}},{{longitude}}" zoom="10"  style="height:300px;">
                     <info-window id="1" position="{{latitude}},{{longitude}}" visible="true">
                         <div ng-non-bindable="">
                             <b>{{location.Name}}</b><br>
