--- a/Web/views/partials/comments.html
+++ b/Web/views/partials/comments.html
@@ -15,7 +15,7 @@
                     <div class="media" ng-repeat="comment in location.Comments">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}">
+                                <img class="media-object" alt="" ng-src="{{comment.UserImgPath}}"  style="height:48px ;width:48px">
                             </a>
 
                         </div>
