--- a/Web/views/admin-partials/menu.html
+++ b/Web/views/admin-partials/menu.html
@@ -1,6 +1,7 @@
 ﻿<div class="page-sidebar-wrapper">
     <div class="page-sidebar navbar-collapse collapse">
         <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+            
             <li class="nav-item start ">
                 <a ui-sref="admin.locations" class="nav-link nav-toggle">
                     <i class="fa  fa-map-marker"></i>
@@ -14,6 +15,13 @@
                 <a ui-sref="admin.users" class="nav-link nav-toggle">
                     <i class="icon-users"></i>
                     <span class="title">Kullanicilar</span>
+                    <span class="arrow"></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a ui-sref="admin.newlocationtypes" class="nav-link nav-toggle">
+                    <i class="icon-tag"></i>
+                    <span class="title">Mekan Tipleri</span>
                     <span class="arrow"></span>
                 </a>
             </li>
