--- a/Web/views/partials/locations.html
+++ b/Web/views/partials/locations.html
@@ -39,7 +39,7 @@
             <div class="col-lg-12" style="margin-top:20px">
                 <div class="portlet light bordered">
                     <div class="portlet-title">
-                        <div class="caption font-green-sharp">
+                        <div class="caption font-green-sharp" style="font-size:20px;">
                             <i class="fa fa-map-marker font-green"></i>
                             <span class="caption-subject bold uppercase"> Mekanlar</span>
                         </div>
