--- a/Mobile/www/views/app/locations/details.html
+++ b/Mobile/www/views/app/locations/details.html
@@ -19,7 +19,19 @@
             </ion-slide-box>
             <hr />
             <p class="post-excerpt" dynamic-anchor-fix ng-bind-html="location.Info | rawHtml"></p>
+           <br />
+            <h2 class="label label-info calm">
+                Yorumlar
+            </h2>
+            <br />
+             <div class="list">
 
+                <span class="item item-avatar"  ng-repeat="comment in location.Comments" style="border:0px!important;border-bottom: 2px solid #181918!important;">
+                    <img ng-src="{{comment.UserImgPath}}" style="margin-left:0px!important;    margin-top: 0px!important">
+                    <a href="directions.html">{{comment.UserName}}</a>
+                    <p>{{comment.Comment}}</p>
+                </span>
+            </div>
         </div>
         <!--<div class="post-tags item item-text-wrap">
             <span class="post-tag button button-small button-outline button-stable">{{category.title}}</span>
@@ -31,11 +43,8 @@
        
             <div class="col col-20 col-center">
                 <a class="button button-icon icon ion-heart button-balanced">{{location.LikeCount}}</a>
-            </div>
-            <div class="col col-20 col-center">
-                <a class="button button-icon icon ion-android-share-alt" ng-click="sharePost(post.url)"></a>
-            </div>
-            <div class="col col-30  col-offset-33 col-center">
+            </div>       
+            <div class="col-offset-66 col-center">
                 <a class="button button-calm" ng-click="open()">Yol Tarifi Al</a>
             </div>
         </div>
