--- a/Mobile/www/views/app/settings.html
+++ b/Mobile/www/views/app/settings.html
@@ -8,7 +8,7 @@
   <ion-content>
     <ul class="list">
 
-      <div class="item item-divider">TOGGLE</div>
+      <!--<div class="item item-divider">TOGGLE</div>
 
       <ion-toggle ng-model="airplaneMode" toggle-class="toggle-assertive">Airplane Mode</ion-toggle>
       <ion-toggle ng-model="wifi" toggle-class="toggle-positive">Wi-Fi</ion-toggle>
@@ -38,11 +38,11 @@
         <i class="icon ion-ios-sunny-outline"></i>
         <input type="range" name="volume" min="0" max="100" value="33">
         <i class="icon ion-ios-sunny"></i>
-      </div>
+      </div>-->
 
       <div class="item item-divider"></div>
 
-      <button class="button button-block button-assertive" ng-click="showLogOutMenu()">
+      <button class="button button-block button-assertive" ng-click="logout()">
         Logout
       </button>
     </ul>
