--- a/Mobile/www/views/app/locations/details.html
+++ b/Mobile/www/views/app/locations/details.html
@@ -32,6 +32,15 @@
                     <p>{{comment.Comment}}</p>
                 </span>
             </div>
+            <br />
+            <h2 class="label label-info calm">
+                Yorum Yap
+            </h2>
+            <div class="col col-center">
+
+                <textarea rows="5" style="width:100%;background-color:wheat"></textarea>
+                <button class=" button button-assertive pull-right" style="    float: right; margin: 10px;">Gönder</button>
+            </div>
         </div>
         <!--<div class="post-tags item item-text-wrap">
             <span class="post-tag button button-small button-outline button-stable">{{category.title}}</span>
